# SimpleCompositionDescriptor

./: LICENSE  README.md  setup.cfg
ToyCompositionDescriptor/: CompositionDescriptor.py  __init__.py  atomicenvtype_generator.py  chemenv_generator.py  composition_feature.py  composition_onehot.py  element_descriptor.csv  element_feature_generator.py  ofm_generator.py
sample/: AET_sample.py  CompositionFeature_sample.py  ElementOneHot_sample.py  OFM_sample.py
test/: sample.py
under_construction/: ofm_original.py
under_construction/materials_project_database/: BaTiO3.cif  NOTE.txt  Nd2Fe14B.cif
