[metadata]
name = ToyCompositionDescriptor
version = attr: ToyCompositionDescriptor.__version__
license = Public Domain
description = Toy Composition Descriptor Generator
author = Hiori Kino
url = https://github.com/nim-hrkn/ToyCompositionDescriptor

[options]
install_requires = 
    pymatgen
zip_safe = False
packages = ToyCompositionDescriptor

